--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,9 @@
 services:
+  redis:
+    image: redis:latest
+    restart: on-failure
+    expose:
+      - "6379"
 
   db:
     image: postgres:latest
@@ -19,11 +24,24 @@ services:
     build: .
     tty: true
     ports:
-      - "8001:8000"
+      - "8020:8000"
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     depends_on:
       db:
         condition: service_healthy
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+
+  celery:
+    build: .
+    restart: on-failure
+    tty: true
+    command: celery -A config worker --beat --scheduler django --loglevel=info
+    depends_on:
+      - redis
+      - app
     env_file:
       - .env
     volumes:
